# Cordy

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
cordy/: __init__.py  auth.py  client.py  errors.py  events.py  gateway.py  http.py  ratelimit.py  runner.py  types.py  util.py
cordy/http/: __init__.py  cdn.py  ratelimit.py  route.py  session.py
cordy/models/: __init__.py  emoji.py  flags.py  intents.py  permission.py  role.py  snowflake.py  user.py
cordy/types/: __init__.py  gateway.py  models.py
docs/source/: conf.py  index.rst
docs/source/api/: client.rst  errors.rst  index.rst  intents.rst  runners.rst  token.rst
script/: make_venv  make_venv.py  typec  typec.bat
