[tool.poetry]
name = "cordy"
version = "0.1.0"
description = "A simple to use Discord API wrapper"
authors = ["BytesToBits"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
