[tool.poetry]
name = "cordy.py"
version = "0.1.0.dev1"
description = "A simple to use Discord API wrapper"
authors = ["BytesToBits"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = {version = "^4.1.2", optional = true}
furo = {version = "^2021.7.5-beta.38", optional = true}
yarl = "^1.6.3"
aiohttp = "^3.7.4"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[tool.poetry.extras]
docs = ["Sphinx", "furo"]

[tool.pyright]
include = ["uprate"]
exclude = ["docs", ".venv/", ".git", "**/__pycache__", ".mypy_cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
