[tool.poetry]
name = "cordy.py"
version = "0.1.0.dev3"
description = "A simple to use Discord API wrapper"
authors = ["BytesToBits"]
license = "MIT"
packages = [
    {include = "cordy"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

homepage = "https://github.com/BytesToBits/Cordy#readme"
repository = "https://github.com/BytesToBits/Cordy"
documentation = "https://cordy.rtfd.io"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BytesToBits/Cordy/issues"
discord = "https://discord.gg/G4VhjVkGzu"


[tool.poetry.dependencies]
python = "^3.9"
Sphinx = {version = "^4.1.2", optional = true}
furo = {version = "^2021.7.5-beta.38", optional = true}
yarl = "^1.6.3"
aiohttp = "^3.7.4"
typing-extensions = "^3.10.0"
uprate = "^0.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[tool.poetry.extras]
docs = ["Sphinx", "furo"]

[tool.pyright]
include = ["uprate"]
exclude = ["docs", ".venv/", ".git", "**/__pycache__", ".mypy_cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
